Bug 504386 - Click on "Report bug" button from a crash notification does not open the drkonqi bug report wizard
Summary: Click on "Report bug" button from a crash notification does not open the drko...
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.3.90
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-17 08:59 UTC by Patrick Silva
Modified: 2025-05-28 00:16 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2025-05-17 08:59:13 UTC
STEPS TO REPRODUCE
1. cause a KDE app to crash
2. when the crash notification appears, click on its "Report bug" button
3. 

OBSERVED RESULT
nothing happens

EXPECTED RESULT
drkonqi bug report wizard opens

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.3.90
KDE Frameworks Version: 6.14.0
Qt Version: 6.9.0
Graphics Platform: Wayland
Comment 1 Nate Graham 2025-05-19 14:46:40 UTC
Hmm, this works for me on my compiled-from-source version on top of Fedora KDE 42.
Comment 2 Nate Graham 2025-05-19 14:47:20 UTC
If you run `journalctl -f` the moment you see a crash notification, and then click on the button, is anything suspicious printed to the log file?
Comment 3 Patrick Silva 2025-05-19 15:23:19 UTC
your command prints these lines after click on the button:

mai 19 12:21:34 Arch-PC env[13979]: 12:21:34.003 › [RPCServer:IPC] Socket Message: 6 [object Object]
mai 19 12:21:34 Arch-PC env[13979]: 12:21:34.010 › [RPCServer:IPC] Socket Emit: 6 [object Object]
mai 19 12:21:44 Arch-PC env[13979]: 12:21:44.010 › [RPCServer:IPC] Socket Message: 6 [object Object]
mai 19 12:21:44 Arch-PC env[13979]: 12:21:44.017 › [RPCServer:IPC] Socket Emit: 6 [object Object]
mai 19 12:21:54 Arch-PC env[13979]: 12:21:54.008 › [RPCServer:IPC] Socket Message: 6 [object Object]
mai 19 12:21:54 Arch-PC env[13979]: 12:21:54.017 › [RPCServer:IPC] Socket Emit: 6 [object Object]
Comment 4 duha.bugs 2025-05-19 20:27:42 UTC
I have the same issue (compiled from git master). Opening from the systray works though.

Operating System: Arch Linux 
KDE Plasma Version: 6.3.90 
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.0
Kernel Version: 6.14.6-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 5 Patrick Silva 2025-05-20 12:01:06 UTC
I can reproduce on neon unstable too.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.0
Graphics Platform: Wayland
Comment 6 Kai Uwe Broulik 2025-05-24 10:17:39 UTC
Can confirm. The notification actions do not work anymore. I can see the signal sent on the bus but it never arrives in the app.
Comment 7 Bug Janitor Service 2025-05-26 11:23:40 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/drkonqi/-/merge_requests/334
Comment 8 Harald Sitter 2025-05-27 23:56:44 UTC
Git commit 2cba13f123f92a975daacd3c191a5fe926b3bc4e by Harald Sitter.
Committed on 27/05/2025 at 23:56.
Pushed by sitter into branch 'master'.

backtracegenerator: convert memoryfence to qglobalstatic

The previous code lead to the qdbusconnection getting stuck in delivery
supsension leading to all dbus signals never getting dispatched to the
slots.

M  +10   -4    src/backtracegenerator.cpp
M  +0    -1    src/backtracegenerator.h

https://invent.kde.org/plasma/drkonqi/-/commit/2cba13f123f92a975daacd3c191a5fe926b3bc4e
Comment 9 Harald Sitter 2025-05-27 23:58:00 UTC
Git commit c3d1fc4ee93bfee8bee77df23e16bb9ae52076d4 by Harald Sitter.
Committed on 27/05/2025 at 23:57.
Pushed by sitter into branch 'Plasma/6.4'.

backtracegenerator: convert memoryfence to qglobalstatic

The previous code lead to the qdbusconnection getting stuck in delivery
supsension leading to all dbus signals never getting dispatched to the
slots.


(cherry picked from commit 2cba13f123f92a975daacd3c191a5fe926b3bc4e)

Co-authored-by: Harald Sitter <sitter@kde.org>

M  +10   -4    src/backtracegenerator.cpp
M  +0    -1    src/backtracegenerator.h

https://invent.kde.org/plasma/drkonqi/-/commit/c3d1fc4ee93bfee8bee77df23e16bb9ae52076d4