backtracegenerator: convert memoryfence to qglobalstatic

The previous code lead to the qdbusconnection getting stuck in delivery
supsension leading to all dbus signals never getting dispatched to the
slots.

BUG: 504386


(cherry picked from commit 2cba13f123f92a975daacd3c191a5fe926b3bc4e)

Co-authored-by: Harald Sitter <sitter@kde.org>